#1にに対する対応をしました。

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Gitのブランチを勉強しています。</h1>
     <p>この変更はadd-index-pageブランチで追加されました。</p>
-    <p>新しく追加しました。</p>
+    <p>新しく追加しました。😀</p>
 </body>
 </html>
